--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easy Programing</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    
 
     <!-- custom css -->
     <link rel="stylesheet" href="styles.css">
+    
 
     <!-- fontawesome cdn -->
     <script src="https://kit.fontawesome.com/f9ab9b864d.js" crossorigin="anonymous"></script>
@@ -18,7 +20,7 @@
    <header class="container ">
     <nav class="navbar navbar-expand-lg  mt-4">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Easy Programing</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
