--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="ps-3 border rounded">
             <h3>ui/ux Design</h3>
             <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser.</p>
-            <h5>Price: $200</h5>
+            <h5 class="text-primary">Price: $200</h5>
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
           <div class="ps-3 border rounded">
             <h3>Html course</h3>
             <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser.</p>
-            <h5>Price: $200</h5>
+            <h5 class="text-primary">Price: $200</h5>
           </div>
         </div>
       </div>
@@ -154,7 +154,7 @@
           <div class="ps-3 border rounded">
             <h3>Programing</h3>
             <p>Programming is the process of creating a set of instructions that tell a computer how to perform a task. Programming can be done using a variety of computer programming languages.</p>
-            <h5>Price: $200</h5>
+            <h5 class="text-primary">Price: $200</h5>
           </div>
         </div>
       </div>
@@ -166,7 +166,7 @@
           <div class="ps-3 border rounded">
             <h3>JavaScript</h3>
             <p>JavaScript is the world's most popular programming language. JavaScript is the programming language of the Web. JavaScript is easy to learn.</p>
-            <h5>Price: $200</h5>
+            <h5 class="text-primary">Price: $200</h5>
           </div>
         </div>
       </div>
@@ -178,7 +178,7 @@
           <div class="ps-3 border rounded">
             <h3>Python</h3>
             <p>Python is a high-level, interpreted, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation. .</p>
-            <h5>Price: $200</h5>
+            <h5 class="text-primary">Price: $200</h5>
           </div>
         </div>
       </div>
@@ -190,7 +190,7 @@
           <div class="ps-3 border rounded">
             <h3>Motion Graphics</h3>
             <p>Motion graphics (sometimes mograph) are pieces of animation or digital footage which create the illusion of motion or rotation, and are usually  .</p>
-            <h5>Price: $200</h5>
+            <h5 class="text-primary">Price: $200</h5>
           </div>
         </div>
       </div>
