new commit for the course text

--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
 <main > 
     <div class="container text-center mt-4 col-lg-6">
         <div >
-            <h2>Discover our Popular</h2>
-            <h2>Course</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable
-                content of a page when looking at its layout.
+            <h2>Discover our Most </h2>
+            <h2> Popular Course</h2>
+            <p>you can see our all the courses, you can choose your best courses here, we published updated course alwaysly. so don't miss it.
                 </p>
         </div>
     </div>
