--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         
 
      
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Register Now
 </button>
 
