--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="p-3 ">
                 <img class="img-fluid" src="image/student-1.png" alt="">
                 <div class="border">
-                    <h5>Anowar islam</h5>
+                    <h5>Mr. Anowar islam</h5>
                 <p>ui/ux designer</p>
                 </div>
             </div>
@@ -281,7 +281,7 @@
             <div class="p-3 ">
                 <img class="img-fluid" src="image/student-2.png" alt="">
                 <div class="border ">
-                    <h5>Jannatul islam</h5>
+                    <h5>Ms. Jannatul islam</h5>
                 <p>Motion Design</p>
                 </div>
             </div>
@@ -290,7 +290,7 @@
             <div class="p-3 ">
                 <img class="img-fluid" src="image/student-3.png" alt="">
                 <div class="border">
-                    <h5>Imran Hossain</h5>
+                    <h5>Mr. Imran Hossain</h5>
                 <p>Graphics Designer</p>
                 </div>
             </div>
@@ -299,7 +299,7 @@
             <div class="p-3  ">
                 <img class="img-fluid" src="image/student-4.png" alt="">
                 <div class="border">
-                    <h5>Nishi Akter</h5>
+                    <h5>Ms. Nishi Akter</h5>
                 <p>Web Developer</p>
                 </div>
             </div>
