--- a/index.html
+++ b/index.html
@@ -202,6 +202,40 @@
 
   <!-- course section end -->
 
+  <!-- student section -->
+  <section class="container">
+    <div class="bg-primary rounded mt-5 d-flex">
+      <div class="col-lg-6">
+        <img class="img-fluid" src="image/working.png" alt="">
+      </div>
+      <div class="col-lg-6 p-5 mt-5">
+        <h2 class="text-white">Explore The learning</h2>
+        <h2 class="text-white">Institute</h2>
+        <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+
+        <div class="d-flex justify-content-around mt-5 text-white">
+          <div >
+            <h1>3.2k</h1>
+            <p>online course</p>
+          </div>
+          <div>
+            <h1>3.2k</h1>
+            <p>online course</p>
+          </div>
+          <div>
+            <h1>3.2k</h1>
+            <p>online course</p>
+          </div>
+        </div>
+        <div class="text-center mt-4">
+          <button class="btn btn-success fw-bold">Read More</button>
+       </div>
+      </div>
+    </div>
+    
+  </section>
+  <!-- student section end -->
+
   <!-- Bonus section start-->
 
   <section class="container ">
